# ComputeBridge

./: README.md
cbpp/: CMakeLists.txt  build_win.bat
cbpp/codegen/: CUDADoubleMath.h  Prologue.cuh  Prologue.h  Prologue_CPlusPlus.cuh  Prologue_CUDA.cuh  Prologue_OpenCL.cuh
cbpp/inc/: Prologue.cuh  Prologue_CPlusPlus.cuh  Prologue_CUDA.cuh  Prologue_OpenCL.cuh
cbpp/inc/cbpp/: Atomics.h  Math.h  Platform.h  Platform_CPlusPlus.h  Platform_CUDA.h  Platform_OpenCL.h
cbpp/src/: Base.cpp  Base.h  ComputeParser.c  ComputeParser.h  ComputeProcessor.cpp  ComputeProcessor.h  PrologueTransform.cpp  TextureTransform.cpp  cbpp.cpp  fcpp.c  fcpp.h
lib/: ComputeParser.c  ComputeParser.h
